--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+h1{
+   color: chartreuse;
+}
+
 body{
    background:blue;
 }
+
+table tr td{
+   border: 3px solid;
+   border-color: black;
+}
+
